<resources>
    <string name="app_name">LocDVD</string>
    <string name="titre_du_film">Titre du film : %s</string>
    <string name="annee_de_sortie">Année de sortie : %d</string>
    <string name="addDVD_annee">Année de dvd : %d</string>
    <string name="acteurs">Acteur: %s</string>
    <string name="resume">Résumé : %s</string>
    <string name="titre_du_film_ADD">Titre du film : </string>
    <string name="annee_de_sortie_ADD">Année de sortie :</string>
    <string name="addDVD_annee_ADD">Année de dvd : </string>
    <string name="acteurs_ADD">Acteur(s): </string>
    <string name="resume_ADD">Résumé : </string>
</resources>
